infra/Istio/pingpong-virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pingpong-virtualservice
  namespace: pingpong-a
spec:
  hosts:
  - "pingpong-a.example.com"
  gateways:
  - pingpong-gateway
  http:
  - match:
    - uri:
        exact: /ping
    route:
    - destination:
        host: pingponger-b.pingpong-b.svc.cluster.local
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pingpong-virtualservice
  namespace: pingpong-b
spec:
  hosts:
  - "pingpong-b.example.com"
  gateways:
  - pingpong-gateway
  http:
  - match:
    - uri:
        exact: /ping
    route:
    - destination:
        host: pingponger-a.pingpong-a.svc.cluster.local
        port:
          number: 8080
